--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -36,7 +36,9 @@
             "@cmmv/odds": ["../../packages/odds"],
             "@cmmv/odds/*": ["../../packages/odds/*"],
             "@cmmv/newsletter": ["../../packages/newsletter"],
-            "@cmmv/newsletter/*": ["../../packages/newsletter/*"]
+            "@cmmv/newsletter/*": ["../../packages/newsletter/*"],
+            "@cmmv/football-predictions": ["../../packages/football-predictions"],
+            "@cmmv/football-predictions/*": ["../../packages/football-predictions/*"]
         }
     },
     "include": ["src"],
